...

    weatherData?.let { weatherData ->

        Column(
            Modifier
                .fillMaxSize()
                .testTag("weather_screen_container")
        ) {

            TopAppBar(
                title = {
                    Text(text = "${weatherData.name}, ${weatherData.sys.country}")
                },
                colors = TopAppBarDefaults.smallTopAppBarColors(
                    containerColor = MaterialTheme.colorScheme.primary,
                    titleContentColor = MaterialTheme.colorScheme.onPrimary
                ),
                actions = {
                    Button(
                        modifier = Modifier.testTag("change_location_button"),
                        onClick = {
                            viewModel.currentScreen.value = SEARCH_SCREEN
                            navController.navigate(SEARCH_SCREEN)
                        },
                        colors = ButtonDefaults.buttonColors(
                            containerColor = MaterialTheme.colorScheme.surface,
...
